# google-rss-mcp

./: Dockerfile  README.md  client_test.py  langgraph_test.py  pyproject.toml  smithery.yaml
src/: client.py  rss.py  server.py
