[project]
name = "google-rss-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "ccw7463", email = "ccw7463@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.11.0",
    "feedparser>=6.0.11",
    "requests>=2.32.4",
    "aiohttp>=3.12.14",
    "fastmcp>=2.10.5",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.2",
    "langchain-openai>=0.3.27",
    "rich>=14.0.0",
    "langchain-community>=0.3.27",
    "html2text>=2025.4.15",
    "tqdm>=4.67.1",
    "beautifulsoup4>=4.12.2"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]